--- a/rem.1
+++ b/rem.1
@@ -10,7 +10,7 @@ rem.sh - Replaces native rm command
 .SH DESCRIPTION
 .B rem
 is a script to replace the native rm command.  When properly installed it will be ran
-when rm is invoked.  To access the native rm command use \\rm.
+when rm is invoked.  To access the native rm command use \rm.
 This command will move the files to a hidden .trash folder in the user's home directory.
 .\"
 .SH OPTIONS
